feat: Created CRUD Pacientes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         {
             "name": "feature/project-creation",
             "base": "develop"
+        },
+        {
+            "name": "feature/crud-pacientes",
+            "base": "develop"
         }
     ]
 }
