--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
         {
             "name": "feature/crud-users",
             "base": "develop"
+        },
+        {
+            "name": "feature/curd-agendamentos",
+            "base": "develop"
         }
     ]
 }
