feat: Layout change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,10 @@
         {
             "name": "feature/curd-agendamentos",
             "base": "develop"
+        },
+        {
+            "name": "feature/layout-change",
+            "base": "develop"
         }
     ]
 }
