--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,10 @@
         {
             "name": "feature/layout-change",
             "base": "develop"
+        },
+        {
+            "name": "feature/fix-agendamentos",
+            "base": "develop"
         }
     ]
 }
